--- a/laura.html
+++ b/laura.html
@@ -1,41 +1,184 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="stylesheet" href="laura.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Laura Pires</title>
 
-  <title>Laura Pires</title>
-</head>
-<body>
-  <div class="container " style="width: 50%">
-    <div class="row">
-      <div class="col">
-        <div class="lang">
-          <h1 class="titulo">Presidente</h1>
+    <!-- Bootstrap core CSS -->
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="col-2">
+      </div>
+      <div class="col-3"></div>
+      <div class="col-3">
+        <h1>Eleição 18</h1>
+      </div>
+      <div class="col-2"></div>
+    </nav>
+  </head>
+
+  <body>
+    <div class="container col-12">
+      <div class="row">
+
+        <div class="col-3">
         </div>
-        <div class="abc">
-          <h2 class="numero">99%</h2>
-        </div>
 
-        <div class="progress">
-          <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="col-6">
+            <div class="presidente">
+                <h1><b>Presidente</b></h1>
+                <h4>100%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="background-color: #34C771;width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p>Seções apuradas: <b>454490</b> de 454490 </p>
+            <hr>
+            <h3><b>Candidatos</b></h3>
+            
+            <div class="candidato">
+              <div class="informacao">
+                <div class="foto">
+                  <img src="https://s2.glbimg.com/dYlPHNBt6S7pa_y6pmPXUmzuglA=/150x150/smart/s2.glbimg.com/t6nXAKlEYV7QlobBFaRv-WE3GpI=/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2018/K/V/TFn7j0RbOhBuPgUu7leg/presidencia-jair-bolsonaro.jpg" alt="">
+                </div>
+                <div class="nome">
+                  <a><b>Jair Bolsonaro</b></a><br>
+                  <a class="text-muted">PSL <span class="btn btn-light"><b>2º Turno</b></span></a>
+                </div>
+                <div class="percentual">
+                  <a><b>46,03%</b></a><br>
+                  <a class="text-muted">49.276.897 votos</a>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="background-color: #34C771;width: 46.03%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><br>
+
+            <div class="candidato">
+              <div class="info">
+                <div class="foto">
+                  <img src="https://s2.glbimg.com/q8O1R3vA_WFU1eEcXj98JkbiDDA=/150x150/smart/s2.glbimg.com/h3m4hkXO9iRVViHYb9C_P662AFU=/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2018/4/t/vS8tTHQBO4VoQt8bEdiw/presidencia-fernando-haddad.jpeg" alt="">
+                </div>
+                <div class="nome">
+                  <a><b>Fernando Haddad</b></a><br>
+                  <a class="text-muted">PT <span class="btn btn-light"><b style="">2º Turno</b></span></a>
+                </div>
+                <div class="percentual">
+                  <a><b>29,28%</b></a><br>
+                  <a class="text-muted">31.341.997 votos</a>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="background-color: #34C771;width: 29.28%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><br>
+
+            <div class="candidato">
+              <div class="info">
+                <div class="foto2">
+                  <img class="text-muted" src="https://s2.glbimg.com/zmODkoY97cyYlFF6lEuLL6d3z9Y=/150x150/smart/s.glbimg.com/jo/g1/f/original/2018/08/09/presidencia_ciro_gomes_XplMGTn.jpg" alt="">
+                </div>
+                <div class="nome">
+                  <a><b class="text-muted">Ciro Gomes</b></a><br>
+                  <a class="text-muted">PDT</a>
+                </div>
+                <div class="percentual">
+                  <a><b class="text-muted">12,47%</b></a><br>
+                  <a class="text-muted">13.344.353 votos</a>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="background-color: #C2C2C2;width: 12.47%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><br>
+
+            <div class="candidato">
+              <div class="info">
+                <div class="foto2">
+                  <img src="https://s2.glbimg.com/qQsxgrWdWWa6Bhg6u00EQkADOTc=/150x150/smart/s.glbimg.com/jo/g1/f/original/2014/06/27/alckmin-foto.jpg" alt="">
+                </div>
+                <div class="nome">
+                  <a class="text-muted"><b>Geraldo Alckmin</b></a><br>
+                  <a class="text-muted">PSDB</a>
+                </div>
+                <div class="percentual">
+                  <a class="text-muted"><b>4,76%</b></a><br>
+                  <a class="text-muted">5.096.341 votos </a>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="background-color: #C2C2C2;width: 4.76%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><br>
+
+            <div class="candidato">
+              <div class="info">
+                <div class="foto2">
+                  <img src="https://s2.glbimg.com/CS43wOs-zJ-G9UF4qtqOEuxRsiw=/150x150/smart/s.glbimg.com/jo/g1/f/original/2018/08/07/presidencia_joao_amoedo_G2myNTg.jpg" alt="">
+                </div>
+                <div class="nome">
+                  <a class="text-muted"><b>João Amoêdo</b></a><br>
+                  <a class="text-muted">NOVO</a>
+                </div>
+                <div class="percentual">
+                  <a class="text-muted"><b>2,50%</b></a><br>
+                  <a class="text-muted">2.679.728 votos </a>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="background-color: #C2C2C2;width: 2.50%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><br>
+
+            <div class="candidato">
+              <div class="info">
+                <div class="foto2">
+                  <img src="https://s2.glbimg.com/uAliV21RKWhzf5AGaEMLIWAviXY=/150x150/smart/s.glbimg.com/jo/g1/f/original/2018/08/09/presidencia_cabo_daciolo.jpg" alt="">
+                </div>
+                <div class="nome">
+                  <a class="text-muted"><b>Cabo Daciolo</b></a><br>
+                  <a class="text-muted">PATRI</a>
+                </div>
+                <div class="percentual">
+                  <a class="text-muted"><b>1,26%</b></a><br>
+                  <a class="text-muted">1.348.323 votos</a>
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="background-color: #C2C2C2;width: 1.26%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><br>
+          
+          </div>
+
+        <div class="col-3">
         </div>
       </div>
 
     </div>
 
-  </div>
-  
 
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/vendor/jquery-slim.min.js"></script>
+    <script src="assets/js/vendor/popper.min.js"></script>
+    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/vendor/holder.min.js"></script>
+    <script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
+  </body>
 </html>
